# SMARTGE_REPO

./: .gitignore  CMakeLists.txt  review-01.patch  sdkconfig.defaults
main/: CMakeLists.txt  config.h  dht22.cpp  dht22.h  firestore.cpp  firestore.h  leds.cpp  leds.h  main.cpp  readme.txt  relays.cpp  secrets.h.example  sensors.cpp  sensors.h  time_sync.cpp  time_sync.h  wifi.cpp  wifi.h
